修复导图下载地址默认值none的bug

--- a/baidumindmap/static/html/student_download.html
+++ b/baidumindmap/static/html/student_download.html
@@ -12,7 +12,7 @@
                 退出全屏
             </button>
             <button class="js-button-download">
-                <a href="{img_url}" download="{display_name}.jpg">下载</a>
+                <a target="_blank" href="{img_url}" download="{display_name}.jpg">下载</a>
             </button>
         </div>
 
