脑图初始化后居中

--- a/baidumindmap/static/html/map.html
+++ b/baidumindmap/static/html/map.html
@@ -33,10 +33,22 @@
 
 <script type="text/javascript" src="/static/baidumindmap/kityminder-core/dist/kityminder.core.min.js"></script>
 <script type="text/javascript">
-    // 创建 km 实例
-    /* global kityminder */
-    var km = window.km = new kityminder.Minder();
-    km.setup('#minder-view');
+    (function(){
+        var MindMap = {
+            init: function(target){
+                var self = this;
+                var km = new kityminder.Minder();
+                window.km = km;
+                window.km.setup(target);
+            },
+            move: function(number) {
+                setTimeout(function(){km.getViewDragger().move(new kity.Point(number, 0));}, 500);
+            }
+        };
+        window.MindMap = MindMap;
+    })();
+    window.MindMap.init('#minder-view');
+    window.MindMap.move(${offset});
 </script>
 
 </html>
