添加lms操作提示

--- a/baidumindmap/static/html/student_download.html
+++ b/baidumindmap/static/html/student_download.html
@@ -21,5 +21,7 @@
                 width="{width}%"
                 height="{height}"
         ></iframe>
+
+        <p>提示：1.按住鼠标右键可以拖动脑图  2.Ctrl+滚轮可以缩放脑图</p>
      </div>
 </div>
