--- a/baidumindmap/static/html/student.html
+++ b/baidumindmap/static/html/student.html
@@ -19,6 +19,6 @@
                 height="{height}"
         ></iframe>
 
-        <p>提示：1.按住鼠标右键可以拖动脑图  2.Ctrl+滚轮可以缩放脑图</p>
+        <p>提示：1.按住鼠标右键可以拖动脑图  2.Ctrl+滚轮可以缩放脑图  3.Ctrl+s保存脑图为图片</p>
      </div>
 </div>
